# jobrag

./: .gitignore  README.md  pyproject.toml
src/jobrag/: chunk.py  cli.py  embed.py  index.py  ingest.py  llm.py  logging_utils.py  rag.py  settings.py  store.py
src/scripts/: rebuild_index.py  search_debug.py
src/tests/: chunk_test.py  embed_test.py  ingest_test.py  jd_test.py  llm_test.py  rag_test.py  retrieval_test.py
